# camera_calibration

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: cmake_app_config.cmake
include/: main.h  main_functions.h  main_structures.h  secondary_structures_and_literals.h
lib/camera_calibration/: CMakeLists.txt
lib/camera_calibration/include/camera_calibration/: camera_calibration.h
lib/camera_calibration/src/: camera_calibration.cpp
share/: calibration_paramters.txt  calibration_settings.json  camera_calibration_setting.json  camera_parameters.txt  circle_detector_settings.json
src/: main.cpp  main_functions.cpp  new_main.cpp
